fixed navbar z-index

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,6 +11,7 @@
     border-bottom: 1px solid black;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     width: 100%;
+    z-index: 1;
 }
 
 .navbar_container {
